fix overflow issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   position: relative;
   min-height: 100vh;
   padding-bottom: 50px;
+  overflow: hidden;
 }
 
 
